# THSR

./: .gitignore  Cargo.toml  README.md  lcd
.github/workflows/: build.yaml
src/: cli.rs  lib.rs  main.rs  schema.rs
